--- a/OpenWGA/plugins/cm/design/tml/html/init-bi.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/init-bi.tml
@@ -48,7 +48,7 @@
   	}
 
 	<tml:case condition="profile.hasItem('se_pagesize')">
-		BI.se.pageSize = <tml:script format="0">return profile.se_pagesize</tml:script>;
+		BI.se.pageSize = <tml:script format="0">return profile.se_pagesize||0</tml:script>;
 	</tml:case>
 	
 </script>
