--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
@@ -53,7 +53,8 @@
 	
 		"input[type=text], input[type=password], textarea": {
 			width: "100%",
-			font: "inherit"
+			font: "inherit",
+			box_sizing: "border-box"
 		},
 		
 		"input[type=file]":{
