#00004825: CMM style include improvements

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
@@ -80,7 +80,7 @@
 		$("#album-<tml:option name="ns"/>").imageAlbum();
 	});
 	<tml:case condition="CMM.setting('lightbox')">
-		require(["jquery", "jquery-lightbox"], function(){
+		require(["jquery-lightbox"], function(){
 			$(function(){
 				$("#album-<tml:option name="ns"/>").find("img").lightbox({
 					group: "<tml:option name="ns"/>",
