SEO-Panel: Headdings: Add "empty" String if Heading is empty.

--- a/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
@@ -149,7 +149,7 @@
 										struct.append('<div class="outline-error tag tag-H' + i + '">fehlt</div>');
 								}
 								currentLevel = level
-								struct.append('<div class="tag tag-' + this.tagName + '">' + $(this).text() + "</div>");			
+								struct.append('<div class="tag tag-' + this.tagName + '">' + ($(this).text().trim() || "(leer)") + "</div>");			
 							})
 							var h1 = $(el).find("h1").length
 							if(h1!=1)
