--- a/OpenWGA/plugins/cm/design/tml/html/include-js-css-ext.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/include-js-css-ext.tml
@@ -22,52 +22,26 @@
 ## along with OpenWGA in file COPYING.
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
+
 <tml:include designdb="@afw" ref="ext:include-js-all">
 	<tml:option name="debug"><tml:urlparameter name="debug"/></tml:option>
 </tml:include>
 
-<tml:if condition="request.getParameter('debug')=='true'">
+<script type="text/javascript" src="<tml:url type="js" name="ext-ext"/>"></script>
+
+<tml:if condition="label('cm.ui-language')=='de'">
 	<tml:then>
-		<script type="text/javascript" src="<tml:url type="js" name="ext-ext"/>"></script>
-		
-		<tml:if condition="label('cm.ui-language')=='de'">
-			<tml:then>
-				<script type="text/javascript" src="<tml:url type="js" name="ext-lang-de"/>"></script>
-				<script type="text/javascript" src="<tml:url type="js" name="labels_de"/>"></script>
-			</tml:then>
-			<tml:else>
-				<script type="text/javascript" src="<tml:url type="js" name="labels_en"/>"></script>
-			</tml:else>
-		</tml:if>
-
-		<script type="text/javascript" src="<tml:url db="@afw" type="js" name="rtfeditor2"/>"></script>
-		<script type="text/javascript" src="<tml:url db="@afw" type="js" name="file-uploader"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="bi"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="bi-util"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="rtftoolbar"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="siteexplorer.js"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="sitepanel"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="dialog"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="layout"/>"></script>	
-
-		<script type="text/javascript" src="<tml:url type="js" name="design"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="bi-combotree"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="upload-manager"/>"></script>
-		
-		<script type="text/javascript" src="<tml:url type="js" name="resizable-dialog"/>"></script>
-		<script type="text/javascript" src="<tml:url type="js" name="dialog-image"/>"></script>
-		
-		<script src="<tml:url type="js" name="shCore"/>"></script>
-		<script src="<tml:url type="js" name="shBrushJs"/>"></script>
-
-		<script type="text/javascript" src="<tml:url type="tml" medium="javascript" name="rtftoolpanel"/>"></script>
+		<script type="text/javascript" src="<tml:url type="js" name="ext-lang-de"/>"></script>
+		<script type="text/javascript" src="<tml:url type="js" name="labels_de"/>"></script>
 	</tml:then>
-
 	<tml:else>
-		<script type="text/javascript" src="<tml:url type="tml" medium="javascript" name="all"/>?lang=<tml:label key="cm.ui-language"/>"></script>
+		<script type="text/javascript" src="<tml:url type="js" name="labels_en"/>"></script>
 	</tml:else>
-
 </tml:if>
+
+<script type="text/javascript" src="<tml:url type="js" name="scripts"/>"></script>
+
+<script type="text/javascript" src="<tml:url type="tml" medium="javascript" name="rtftoolpanel"/>"></script>
 
 <tml:include ref="init-bi"/>
 
