#00004834: Content Manager: Added visualisation of headings <h1>-<h6>

--- a/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/heading-helper.scss
+++ b/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/heading-helper.scss
@@ -3,7 +3,7 @@ html.show-heading-helper{
 	h1:before,h2:before,h3:before,h4:before,h5:before,h6:before{
 		background: #286090;
 		color: white;
-		padding: 0 2px;
+		padding: 3px 2px 0;
 		margin-right: 2px;
 		border-radius: 5px;
 		border: 1px solid white;
