--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
@@ -28,14 +28,17 @@
 <tml:case isbrowserinterface="true" iscurrentdocument="true">
 	<script>
 		WGA.CMM.hasSections=true;
-		WGA.CMM.sections["<tml:item name="$mc.section"/>"]=<tml:item name="$mc.allowedModulesString" encode="none"/>;
+		WGA.CMM.sections["<tml:item name="$mc.section"/>"]={
+			title: "<tml:item name="$mc.sectionTitle"/>",
+			allowedModules: <tml:item name="$mc.allowedModules" encode="none"/>
+		};
 	</script>
 </tml:case>
 
 <tml:if condition="$mc.mods.isEmpty()">
 	<tml:then>
 		<tml:case if="$mc.mayEdit">
-			<a class="WGA-Item-Edit no-modules" style="display:none" href="#" id="no-modules-<tml:item name="$mc.section"/>"
+			<a class="WGA-Item-Edit no-modules" style="display:none" href="#" id="no-modules-<tml:item name="$mc.uid"/>"
 				title = "<tml:label key="cm.click-to-add-modules"/>"
 			>
 				<tml:label key="cm.add-your-modules-please" param1="{$mc.section}"/>				
@@ -43,7 +46,7 @@
 			<script>
 				require(["jquery", "jquery-wga-drophandler"], function(){				
 					if(window.name=="wga-contentmanager-iframe" && window.parent.BI.sitepanel.editItemsVisible){
-						var el = document.getElementById("no-modules-<tml:item name="$mc.section"/>");
+						var el = document.getElementById("no-modules-<tml:item name="$mc.uid"/>");
 						el.style.display="block";
 					}
 					$(function(){
@@ -58,7 +61,7 @@
 								}
 							})
 						}
-						$("#no-modules-<tml:item name="$mc.section"/>").wga_drophandler({
+						$("#no-modules-<tml:item name="$mc.uid"/>").wga_drophandler({
 							ops: ["copy"],
 							onFilesDrop: onFilesDrop
 						})
@@ -68,7 +71,7 @@
 		</tml:case>
 	</tml:then>
 	<tml:else>
-		<div class="content-modules" id="content-modules-<tml:item name="$mc.section"/>" <tml:case condition="option('animate')===true || option('animate')=='true'">style="opacity:0;transition:opacity .2s"</tml:case>>
+		<div class="content-modules" id="content-modules-<tml:item name="$mc.uid"/>" <tml:case condition="option('animate')===true || option('animate')=='true'">style="opacity:0;transition:opacity .2s"</tml:case>>
 			<tml:case if="$mc.mayEdit">
 				<div style="position:relative">
 					<a style="display:none" class="WGA-Item-Edit edit-modules-button" href="#">
@@ -80,7 +83,7 @@
 				<script>
 					require(["jquery"], function(){		
 						if(window.name=="wga-contentmanager-iframe"){
-							$("#content-modules-<tml:item name="$mc.section"/>").bind({
+							$("#content-modules-<tml:item name="$mc.uid"/>").bind({
 								mouseover: function(){
 									$(this).find(".edit-modules-button").show();
 								},
@@ -91,7 +94,7 @@
 							})						
 						}
 						WGA.event.addListener("module-editor", "CMS_item_edit", function(){
-							$("#content-modules-<tml:item name="$mc.section"/>").unbind();
+							$("#content-modules-<tml:item name="$mc.uid"/>").unbind();
 						})
 					})
 				</script>
@@ -105,7 +108,8 @@
 			<tml:case condition="option('animate')===true || option('animate')=='true'">
 				<tml:[script]>
 					require(["jquery"], function(){
-						$("#content-modules-<tml:item name="$mc.section"/>").css("opacity", 1);
+						console.log("hier", $("#content-modules-<tml:item name="$mc.uid"/>"));
+						$("#content-modules-<tml:item name="$mc.uid"/>").css("opacity", 1);
 					})
 				</tml:[script]>
 			</tml:case>
@@ -117,13 +121,13 @@
 	<script>
 		require(["jquery"], function(){
 			if(window.name=="wga-contentmanager-iframe"){		
-				$("#no-modules-<tml:item name="$mc.section"/>.no-modules, #content-modules-<tml:item name="$mc.section"/> .edit-modules-button").click(function(ev){
+				$("#no-modules-<tml:item name="$mc.uid"/>.no-modules, #content-modules-<tml:item name="$mc.uid"/> .edit-modules-button").click(function(ev){
 					ev.preventDefault();
 					parent.BI.dialog.show('content-modules', this, {mode:'edit', section:"<tml:item name="$mc.section"/>"})
 				})
 			}
 			if(window.parent.CM){
-				$("#no-modules-<tml:item name="$mc.section"/>.no-modules, #content-modules-<tml:item name="$mc.section"/> .edit-modules-button").click(function(ev){
+				$("#no-modules-<tml:item name="$mc.uid"/>.no-modules, #content-modules-<tml:item name="$mc.uid"/> .edit-modules-button").click(function(ev){
 					ev.preventDefault();
 					window.parent.CM.openDialog('content-modules', {mode:'edit', section:"<tml:item name="$mc.section"/>"})
 				})
