WGA.item styles: use display:inline as default

--- a/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/wga-item.scss
+++ b/OpenWGA/plugins/cm/design/scripts/css/bi-style-injection/wga-item.scss
@@ -23,6 +23,10 @@
 		display: none;
 	}
 
+	.WGA-Item-Value{
+		display: inline;		
+	}
+	
 	.WGA-Item-Label{
 		border-radius: 5px;				
 		border: dashed silver 2px;
