use PAGEPUBLISHED instead of MODIFIED as post-date

--- a/OpenWGA/plugins/afw/design/tml/rss/rss_20.tml
+++ b/OpenWGA/plugins/afw/design/tml/rss/rss_20.tml
@@ -91,7 +91,7 @@
 					<tml:item name="{_config.body_item}" encode="{_config.body_encode||'rtf'}"/>
 					]]>
 				</description>
-				<pubDate><tml:eval>return MODIFIED.toGMTString()</tml:eval></pubDate>
+				<pubDate><tml:script>return PAGEPUBLISHED.toGMTString()</tml:script>></pubDate>
 				<dc:creator><tml:meta name="author"/></dc:creator>			
 			</item>
 	
