added forcestate to db-portlets

--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/projects-by-domain-iconview.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/projects-by-domain-iconview.tml
@@ -94,7 +94,7 @@
 			
 			<tml:else>
 				<tml:foreach type="itemvalue" item="_dbs" currentvalue="_db">
-					<tml:portlet name="{'portlet-database-'+_db.uid}" ref="::portlet-database" o_uid="{_db.uid}" ajax="true"/>
+					<tml:portlet forcestate="true" name="{'portlet-database-'+_db.uid}" ref="::portlet-database" o_uid="{_db.uid}" ajax="true"/>
 				</tml:foreach>
 			</tml:else>
 			
