#00004856: Removed "compare versions" in content manager

--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/actions/mode-content.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/actions/mode-content.tml
@@ -269,7 +269,7 @@
 			</tml:if>
 		</script>
 	
-		<tml:case condition="_Content.hasOtherVersions()">
+		<tml:comment><tml:case condition="_Content.hasOtherVersions()">
 			<div class="list compare-contents" 
 						onmouseover="Ext.get(this).addClass('selected')"
 						onmouseout="Ext.get(this).removeClass('selected')"
@@ -277,7 +277,7 @@
 			>				
 				{%label:actions.content-compare%}
 			</div>
-		</tml:case>
+		</tml:case></tml:comment>
 	
 		<tml:case condition="_Database.hasMailHost()">
 			<div class="list forward-content" 
