#00004859: Content Manager: Drag&Drop of files stopped working in actual FireFox version

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
@@ -127,7 +127,7 @@
 					parent.BI.dialog.show('content-modules', this, {mode:'edit', section:"<tml:item name="$mc.section"/>"})
 				})
 			}
-			if(window.parent.CM){
+			if(window.parent.CM && window.parent.CM.openDialog){
 				$("#no-modules-<tml:item name="$mc.uid"/>.no-modules, #content-modules-<tml:item name="$mc.uid"/> .edit-modules-button").click(function(ev){
 					ev.preventDefault();
 					window.parent.CM.openDialog('content-modules', {mode:'edit', section:"<tml:item name="$mc.section"/>"})
