--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/item-editor/editors/rtf.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/item-editor/editors/rtf.tml
@@ -65,10 +65,14 @@
 				// enable desktop file drag&drop
 
 				function isDesktopDrop(dt){
-					return WGA.isWebKit ? (dt.types.indexOf("Files")>=0) : (dt.types.contains("Files"))
+					return dt.types.indexOf ? (dt.types.indexOf("Files")>=0) 
+						: dt.types.contains ? (dt.types.contains("Files"))
+						: false;
 				}
 				function isFilesDrop(dt){
-					return WGA.isWebKit ? (dt.types.indexOf("wga/files")>=0) : (dt.types.contains("wga/files"))
+					return dt.types.indexOf ? (dt.types.indexOf("wga/files")>=0) 
+						: dt.types.contains ? (dt.types.contains("wga/files"))
+						: false;
 				}
 				
 				function forceCreateLink(){
