--- a/OpenWGA/plugins/cm/design/tml/html/cms/image-editor.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/image-editor.tml
@@ -51,10 +51,14 @@
 			var form = document.forms["<tml:script expression="tmlform.formid"/>"];
 			
 			function isDesktopDrop(dt){
-				return WGA.isWebKit ? (dt.types.indexOf("Files")>=0) : (dt.types.contains("Files"))
+				return dt.types.indexOf ? (dt.types.indexOf("Files")>=0) 
+					: dt.types.contains ? (dt.types.contains("Files"))
+					: false;
 			}
 			function isFilesDrop(dt){
-				return WGA.isWebKit ? (dt.types.indexOf("wga/files")>=0) : (dt.types.contains("wga/files"))
+				return dt.types.indexOf ? (dt.types.indexOf("wga/files")>=0) 
+					: dt.types.contains ? (dt.types.contains("wga/files"))
+					: false;
 			}
 			
 			function storeFilenameToItem(filename, container, dbkey){
